# deepin-fcitxconfigtool-plugin

./: CMakeLists.txt  README.en.md  README.md  README_zh_CN.md  com.deepin.fcitx-config.gschema.xml  translate_generation.sh
.reuse/: dep5
debian/: changelog  control  copyright  deepin-fcitxconfigtool-plugin.1  deepin-fcitxconfigtool-plugin.manpages  rules
res/: fcitxconfig.qrc
rpm/: 0001-fix-3.patch  deepin-fcitxconfigtool-plugin.spec  fcitxconfigtool.spec
src/: CMakeLists.txt  addimlistmodel.cpp  addimlistmodel.h  addimwidget.cpp  addimwidget.h  comboxwidget.cpp  comboxwidget.h  configwidget.cpp  configwidget.h  fcitxconfigplugin.cpp  fcitxconfigplugin.h  fcitxqthelper.cpp  fcitxqthelper.h  frameproxyinterface.h  gloconfigwidgettab.cpp  gloconfigwidgettab.h  i18n.cpp  i18n.h  imlistmodel.cpp  imlistmodel.h  imwidgettab.cpp  imwidgettab.h  main.cpp  mainwindow.cpp  mainwindow.h  moduleinterface.h  publisherdef.h  settingsitem.cpp  subconfigwidgettab.cpp  subconfigwidgettab.h  uiconfigwidgettab.cpp  uiconfigwidgettab.h  utils.h  widget.cpp  widget.h
src/ddeInterface/: fcitxconfigplugin.json  frameproxyinterface.h  moduleinterface.h  namespace.h
src/fcitxHelper/: fcitx-helper.desktop  main.cpp
src/fcitxInterface/: config.h  dummyconfig.cpp  dummyconfig.h  global.cpp  global.h  i18n.cpp  verticalscrollarea.cpp  verticalscrollarea.h
src/publisher/: publisherdef.h  publisherfunc.cpp  publisherfunc.h
src/widgets/: accessiblewidget.cpp  accessiblewidget.h  basiclistdelegate.cpp  basiclistdelegate.h  basiclistmodel.cpp  basiclistmodel.h  buttontuple.cpp  buttontuple.h  comboxwidget.cpp  comboxwidget.h  contentwidget.cpp  contentwidget.h  imactivityitem.cpp  imactivityitem.h  imsettingsitem.cpp  imsettingsitem.h  keylabel.cpp  keylabel.h  keysettingsitem.cpp  keysettingsitem.h  searchinput.cpp  searchinput.h  settingsgroup.cpp  settingsgroup.h  settingshead.cpp  settingshead.h  settingsheaderitem.cpp  settingsheaderitem.h  settingsitem.cpp  settingsitem.h  switchwidget.cpp  switchwidget.h  titlelabel.cpp  titlelabel.h  translucentframe.cpp  translucentframe.h  utils.h
src/widgets/labels/: clicklabel.cpp  largelabel.h  normallabel.h  shortenlabel.cpp  shortenlabel.h  smalllabel.h  tipslabel.h
src/window/: advancedsettingwidget.cpp  advancedsettingwidget.h  availwidget.cpp  availwidget.h  imaddwindow.cpp  imaddwindow.h  imsettingwindow.cpp  imsettingwindow.h  imwindow.cpp  imwindow.h  settingsdef.h  shortcutkeywindow.cpp  shortcutkeywindow.h
src/window/immodel/: imconfig.cpp  imconfig.h  immodel.cpp  immodel.h
tests/: CMakeLists.txt  cmake-lcov-test.sh  deepinfcitxunittest.cpp  main.cpp  test-prj-running.sh  ui_fcitxconfigplugin.cpp  ut_imsettingwindow.cpp
tests/publisher/: ut_publisherfunc.cpp
tests/windows/: ut_advancedsettingwidget.cpp  ut_availwidget.cpp  ut_gsettingwatcher.cpp  ut_imaddwindow.cpp  ut_imsettingwindow.cpp  ut_imwndow.cpp  ut_shortcutkeywindow.cpp
tests/windows/imconfig/: ut_imconfig.cpp  ut_immodel.cpp
translations/: deepin-fcitxconfigtool-plugin.qm  deepin-fcitxconfigtool-plugin.ts  deepin-fcitxconfigtool-plugin_az.qm  deepin-fcitxconfigtool-plugin_az.ts  deepin-fcitxconfigtool-plugin_bo.qm  deepin-fcitxconfigtool-plugin_bo.ts  deepin-fcitxconfigtool-plugin_ca.qm  deepin-fcitxconfigtool-plugin_ca.ts  deepin-fcitxconfigtool-plugin_cs.qm  deepin-fcitxconfigtool-plugin_cs.ts  deepin-fcitxconfigtool-plugin_de.qm  deepin-fcitxconfigtool-plugin_de.ts  deepin-fcitxconfigtool-plugin_el.qm  deepin-fcitxconfigtool-plugin_el.ts  deepin-fcitxconfigtool-plugin_en_US.qm  deepin-fcitxconfigtool-plugin_en_US.ts  deepin-fcitxconfigtool-plugin_es.qm  deepin-fcitxconfigtool-plugin_es.ts  deepin-fcitxconfigtool-plugin_fi.qm  deepin-fcitxconfigtool-plugin_fi.ts  deepin-fcitxconfigtool-plugin_fr.qm  deepin-fcitxconfigtool-plugin_fr.ts  deepin-fcitxconfigtool-plugin_hi_IN.qm  deepin-fcitxconfigtool-plugin_hi_IN.ts  deepin-fcitxconfigtool-plugin_hr.qm  deepin-fcitxconfigtool-plugin_hr.ts  deepin-fcitxconfigtool-plugin_hu.qm  deepin-fcitxconfigtool-plugin_hu.ts  deepin-fcitxconfigtool-plugin_it.qm  deepin-fcitxconfigtool-plugin_it.ts  deepin-fcitxconfigtool-plugin_ms.qm  deepin-fcitxconfigtool-plugin_ms.ts  deepin-fcitxconfigtool-plugin_nl.qm  deepin-fcitxconfigtool-plugin_nl.ts  deepin-fcitxconfigtool-plugin_pl.qm  deepin-fcitxconfigtool-plugin_pl.ts  deepin-fcitxconfigtool-plugin_pt.qm  deepin-fcitxconfigtool-plugin_pt.ts  deepin-fcitxconfigtool-plugin_pt_BR.qm  deepin-fcitxconfigtool-plugin_pt_BR.ts  (+21 more)
unittest/: deepinfcitxunittest.h
